--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-llama-index
-llama-index-embeddings-gemini
-llama-index-llms-groq
-llama-index-readers-llama-parse
-llama-index-vector-stores-pinecone
-llama-parse
-llama-cloud
-groq
-pinecone
-pyperclip
-gradio
-google-generativeai
+streamlit
+langchain
+langchain-community
+langchain-groq
+pinecone-client
+pdfplumber
+pypdf
+python-dotenv
+transformers
+torch
+sentence-transformers
